# onlyHC

./: CMakeLists.txt  Makefile  README.txt  output  sdkconfig  struttura.c  vai.sh
components/auxiliaryfuncs/: CMakeLists.txt  Kconfig.projbuild  auxiliaryfuncs.c
components/auxiliaryfuncs/include/: auxiliaryfuncs.h
components/cripter/: CMakeLists.txt  Kconfig.projbuild  cripter.c
components/cripter/include/: cripter.h
components/eventengine/: CMakeLists.txt  Kconfig.projbuild  eventengine.c
components/eventengine/include/: eventengine.h  tipostazione.h
components/http_server_simple/: CMakeLists.txt  Kconfig.projbuild  component.mk  mainhttpd.c
components/http_server_simple/include/: miohttpd.h
components/manageUART/: CMakeLists.txt  manageUART.c
components/manageUART/include/: manageUART.h
components/messagehandle/: CMakeLists.txt  Kconfig.projbuild  messagehandle.c
components/messagehandle/include/: messagehandle.h
components/simOK/: CMakeLists.txt  component.mk  simOK.c
components/simOK/include/: simOK.h
components/typeconversion/: CMakeLists.txt  typeconv.c
components/typeconversion/include/: typeconv.h
main/: CMakeLists.txt  Kconfig.projbuild  checkCRC.ods  component.mk  main.c  mainMaster.c
main/include/: funzioni.h  funzioni_basic.h
